--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -17,3 +17,4 @@
 @import './dropdown/dropdown.scss';
 @import './weather/weather.scss';
 @import './toast/toast.scss';
+@import './loader/loader.scss';
