--- a/src/components/bg-image-settings/bg-image-settings.scss
+++ b/src/components/bg-image-settings/bg-image-settings.scss
@@ -5,9 +5,11 @@
     @include flex-self-end-start;
     align-items: center;
     grid-area: bgSettings;
-    margin: 10px 20px;
+    padding: 10px 0px 10px 20px;
+    gap: 10px;
 
     &__button {
+        flex-shrink: 0;
         background-size: cover;
         background-image: url('/src/images/settings.svg');
         width: 30px;
@@ -15,12 +17,9 @@
     }
 
     &__text {
-        overflow: hidden;
-        max-height: 65px;
-        max-width: 150px;
         font-size: 20px;
         color: $gray;
+        text-align: left;
     }
-    
-}
 
+}
