--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -16,13 +16,13 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center; 
-                margin: 20px;
+                padding: 20px;
             }
 
             &_additioonal {
                 display: flex; 
-                margin: 0 20px; 
-                gap: 50px
+                padding: 0 20px; 
+                gap: 30px;
             }
         }
     }
