--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,13 +1,16 @@
 .main {
     width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-areas:
-        "links . . . weather actions"
-        ". . . . . ."
-        ". clockGreeting clockGreeting clockGreeting . ."
-        ". mainFocus mainFocus mainFocus . ."
-        "bgSettings quote quote quote . .";
-    grid-template-columns: 20% 20% 20% 20% 10% 10%;
-    grid-template-rows: repeat(5, 20%);
+    height: 100hv;
+
+    &__grid {
+        display: grid;
+        grid-template-areas:
+            "links . . . weather actions"
+            ". . . . . ."
+            ". clockGreeting clockGreeting clockGreeting . ."
+            ". mainFocus mainFocus mainFocus . ."
+            "bgSettings quote quote quote . .";
+        grid-template-columns: 20% 20% 20% 20% 10% 10%;
+        grid-template-rows: repeat(5, 20%);
+    }
 }
