--- a/src/components/quote/quote.scss
+++ b/src/components/quote/quote.scss
@@ -6,12 +6,14 @@
     flex-direction: column;
     align-items: center;
     grid-area: quote;
-    margin: 10px 20px;
+    padding: 10px 20px;
     gap: 5px;
 
+    &__container {
+        display: none;
+    }
+
     &__text {
-        max-width: 750px;
-        max-height: 70px;
         font-size: 20px;
         text-align: center;
         font-family: Arial, Helvetica, sans-serif;
