--- a/src/components/quote/quote.scss
+++ b/src/components/quote/quote.scss
@@ -28,6 +28,10 @@
         background-image: url('/src/images/update.svg');
         width: 30px;
         height: 30px;
+
+        &:hover {
+            background-image: url('/src/images/update-hover.svg');
+        }
     }
 
     &:hover 
